javadocs updated full