@@ -6,8 +6,13 @@ import models.handlers.RoutesHandler;
 
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
+/**
+ * Shows count of the elements greater than distance value.
+ *
+ * @since 1.0
+ * @author Zerumi
+ */
 public class CountGreaterThanDistanceCommand implements BaseCommand{
     @Override
     public String getName() {
@@ -16,7 +21,7 @@ public class CountGreaterThanDistanceCommand implements BaseCommand{
 
     @Override
     public String getDescr() {
-        return "Shows count of the elements greater than distance value";
+        return "Shows count of the elements greater than distance value.";
     }
 
     @Override
@@ -27,7 +32,7 @@ public class CountGreaterThanDistanceCommand implements BaseCommand{
     public void execute(String[] args) {
         int greaterThan = Integer.parseInt(args[1]);
         CollectionHandler<HashSet<Route>, Route> collectionHandler = RoutesHandler.getInstance();
-        List<Integer> distances = collectionHandler.getCollection().stream().map(Route::getDistance).collect(Collectors.toList());
+        List<Integer> distances = collectionHandler.getCollection().stream().map(Route::getDistance).toList();
 
         System.out.println("Total count: " + distances.stream().map(x -> x > greaterThan).count());
     }
