@@ -4,10 +4,16 @@ import models.Route;
 import models.handlers.CollectionHandler;
 import models.handlers.RoutesHandler;
 
-import java.util.*;
+import java.util.Comparator;
 import java.util.HashSet;
-import java.util.stream.Collectors;
+import java.util.List;
 
+/**
+ * Prints all distance fields in ascending sorting.
+ *
+ * @since 1.0
+ * @author Zerumi
+ */
 public class PrintFieldDistanceAscendingCommand implements BaseCommand {
 
     @Override
@@ -23,9 +29,8 @@ public class PrintFieldDistanceAscendingCommand implements BaseCommand {
     @Override
     public void execute(String[] args) {
         CollectionHandler<HashSet<Route>, Route> collectionHandler = RoutesHandler.getInstance();
-        List<Integer> distances = collectionHandler.getCollection().stream().map(Route::getDistance).collect(Collectors.toList());
+        List<Integer> distances = collectionHandler.getCollection().stream().map(Route::getDistance).sorted(Comparator.comparingInt(o -> o)).toList();
 
-        distances.sort(Comparator.comparingInt(o -> o));
         distances.forEach(System.out::println);
     }
 }
